--- a/mag/src/main/resources/application.yml
+++ b/mag/src/main/resources/application.yml
@@ -5,14 +5,21 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:1111/eureka,http://localhost:2222/eureka
-  server:
-    wait-time-in-ms-when-sync-empty: 3000
 
 server:
-  port: 0
+  port: 15000
 
 spring:
   application:
     name: mag-service
-
+  datasource:
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password: sa
+    driver-class-name: org.h2.Driver
+  h2:
+    console:
+      enabled: true
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
 
