--- a/mag/src/main/resources/application.yml
+++ b/mag/src/main/resources/application.yml
@@ -22,4 +22,6 @@ spring:
       enabled: true
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create
 
