--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "projekt_ajax",
   "version": "4.2.1",
   "scripts": {
-    "start": "node_modules/.bin/gulp watch"
+    "start": "node_modules\\.bin\\gulp watch"
   },
   "description": "A basic HTML starter template for Bootstrap",
   "keywords": [
