--- a/mag/src/main/resources/application.yml
+++ b/mag/src/main/resources/application.yml
@@ -23,4 +23,8 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create
-
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: test@test.pl
+    password: testtest
